deploy/labs/spring-app-deployment-probes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-app
  labels:
    app.openshift.io/runtime: java
    app.openshift.io/runtime-version: openjdk-11-ubi8
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-app
  template:
    metadata:
      labels:
        app: spring-app
    spec:
      containers:
      - name: spring-app
        image: quay.io/kskels/spring-app:latest
        ports:
        - containerPort: 8080

        volumeMounts:
        - name: spring-app-secret
          mountPath: "/etc/secrets/spring-app"
          readOnly: true

        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            scheme: HTTP
            path: /
            port: 8080

      # define volume
      volumes:
      - name: spring-app-secret
        secret:
          secretName: spring-app-secret
