deploy/labs/spring-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-app
spec:
  ports:
    - name: 8080-tcp
      port: 8080
      targetPort: 8080
  selector:
    app: spring-app
